# brick-tac-toe

./: LICENSE  README.md  brick-tac-toe.cabal  stack.yaml
src/: Checks.hs  Control.hs  Main.hs  Misc.hs  Model.hs  Types.hs  View.hs
src/Model/: Board.hs  Player.hs  Score.hs
src/Player/: Computer.hs  Human.hs  MinMax.lhs
tests/: Test.hs
